# payment

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/api/controllers/: auth.py  payment.py  register.py
src/api/exceptions/: handler.py  register.py
src/core/: const.py  database.py  dependencies.py  security.py  settings.py
src/core/cli/: __main__.py  user.py
src/core/enums/: transaction_reason.py  transaction_status.py
src/infra/db/: __init__.py
src/infra/db/migrations/: env.py
src/infra/db/migrations/versions/: 0e36c63cc404_add_transactions_balance_models.py  a49273c6809c_add_user_model.py
src/infra/db/models/: balance.py  common.py  transactions.py  users.py
src/infra/db/repositories/: balance.py  common.py  transaction.py  users.py
src/interfaces/repositories/db/: balance.py  transactions.py  users.py
src/services/: common.py  exceptions.py
src/services/auth/: exceptions.py  use_case.py
src/services/auth/dto/: request.py
src/services/payment/: use_case.py
src/services/payment/dto/: request.py  response.py
src/services/users/: exceptions.py  use_case.py
