[tool.poetry]
name = "payment"
version = "0.1.0"
description = "Test task for Bakai Bank"
authors = ["Aziz <minovaziz@gmail.com>"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
