[tool.poetry]
name = "payment"
version = "0.1.0"
description = "Test task for Bakai Bank"
authors = ["Aziz <minovaziz@gmail.com>"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.2"
gunicorn = "^21.2.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
click = "^8.1.7"
faker = "^23.2.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
slowapi = "^0.1.9"
redis = "5.0.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
